Closed Bug 1109699 Opened 10 years ago Closed 10 years ago

Fix more bad implicit constructors in gfx and image

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8534393 - Flags: review?(jmuizelaar)
Attachment #8534393 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/ccd27160dd97
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: