Bug 1109699 - Fix more bad implicit constructors in gfx and image; r=jrmuizel