gfx/thebes/gfxVR.h
@@ -182,7 +182,7 @@ public:
   virtual nsIScreen* GetScreen() { return mScreen; }
 
 protected:
-  VRHMDInfo(VRHMDType aType) : mType(aType) { MOZ_COUNT_CTOR(VRHMDInfo); }
+  explicit VRHMDInfo(VRHMDType aType) : mType(aType) { MOZ_COUNT_CTOR(VRHMDInfo); }
   virtual ~VRHMDInfo() { MOZ_COUNT_DTOR(VRHMDInfo); }
 
   VRHMDType mType;
